@@ -1,11 +1,4 @@
 # -*- mode: python ; coding: utf-8 -*-
-from PyInstaller.utils.hooks import collect_all
-
-datas = []
-binaries = []
-hiddenimports = []
-tmp_ret = collect_all('tkinterdnd2')
-datas += tmp_ret[0]; binaries += tmp_ret[1]; hiddenimports += tmp_ret[2]
 
 
 block_cipher = None
@@ -14,10 +7,10 @@ block_cipher = None
 a = Analysis(
     ['gui.py'],
     pathex=[],
-    binaries=binaries,
-    datas=datas,
-    hiddenimports=hiddenimports,
-    hookspath=[],
+    binaries=[],
+    datas=[],
+    hiddenimports=[],
+    hookspath=['./hook'],
     hooksconfig={},
     runtime_hooks=[],
     excludes=[],
