@@ -15,9 +15,9 @@ def main() -> int:
                         help="Output location", 
                         type=Path,
                         required=False)
-    parser.add_argument("-u", "--last-ditch-effort", dest="last_ditch_processing",
+    parser.add_argument("-u", "--last-ditch", dest="last_ditch_processing",
                         help="""
-    Run last-ditch-effort processing. In this mode Debloat may remove the
+    Run last-ditch processing. In this mode Debloat may remove the
     whole PE Overlay as a last resort if no smarter method works.
                             """,
                         action='store_true', default=False)
